--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -445,11 +445,9 @@ header .header-img img {
 
 .blog {
   background-color: #FAFAFA;
-  padding: 80px 0;
-  border: yellow 4px solid;
 }
 .blog .wrapper {
-  border: yellow 4px solid;
+  max-width: 1500px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -505,4 +503,13 @@ header .header-img img {
 }
 .links .wrapper .link-box .icon-box {
   align-self: flex-start;
+}
+
+.banner {
+  width: 100vw;
+  padding: 0;
+}
+.banner .wrapper {
+  max-width: 1500px;
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
